<resources>
    <string name="app_name">Clubhub</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_settings">Settings</string>
    <string name="tab_1">Tab 1</string>
    <string name="name">Name</string>
    <string name="ceg_tech_forum">CEG Tech Forum</string>
    <string name="guindy_times">GUINDY TIMES</string>
    <string name="leo_club_of_ceg">LEO Club Of CEG</string>
    <string name="rotract_club_of_ceg">ROTRACT Club Of CEG</string>
    <string-array name="Member_names">
        <item>Robert</item>
        <item>Shanni</item>
        <item>Rachael</item>
        <item>Maddy</item>
        <item>Kate</item>
        <item>Nikhil</item>
    </string-array>
    <array name="profile_pics">
        <item>@drawable/rot</item>
        <item>@drawable/rot</item>
        <item>@drawable/rot</item>
        <item>@drawable/rot</item>
        <item>@drawable/rot</item>
        <item>@drawable/rot</item>
    </array>
    v
    <string-array name="statues">
        <item>Blogging</item>
        <item>Available</item>
        <item>Busy</item>
        <item>In a meeting</item>
        <item>At work</item>
        <item>At gym</item>
    </string-array>
    <string-array name="contactType">
        <item>Mobile</item>
        <item>Work</item>
        <item>Home</item>
        <item>Work</item>
        <item>Mobile</item>
        <item>Mobile</item>
    </string-array>
    <string name="title_activity_capitalize">Capitalize</string>
    <string name="title_activity_green">Green</string>
    <string name="title_activity_robo">Robo</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Enter Your Email...</string>
    <string name="hint_password">Enter Your Password...</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_login">already registered. login me!</string>
    <string name="btn_link_to_register">Dont have an account? register here</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>

</resources>
